--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "mongodb",
     "express"
   ],
-  "author": "Your Name",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
